@startuml
title Class Diagram - Iterazione 3 (Agents Package)

package "agents" <<folder>> {

    class AgentState <<TypedDict>> {
        +query: String
        +context: dict
        +conversation_history: List<dict>
        +user_status: String
        +user_name: String
        +user_surname: String
        +user_department: String
        +user_course: String
        +user_tipology: String
        +user_year: int
        +user_matricola: String
        +category: String
        +category_description: String
        +confidence: String
        +generated_response: String
        +generation_status: String
        +final_response: String
        +has_revisions: bool
        +workflow_steps: List<dict>
        +current_step: String
        +error: String
        +status: String
    }

    abstract class Agent {
        +{abstract} execute(state: AgentState): AgentState
    }

    class OrchestratorAgent {
        -llm: ChatGroq
        -classifier: ClassifierAgent
        -generator: GeneratorAgent
        -reviser: RevisionAgent
        -workflow: StateGraph
        +process_query(query: String, context: dict, user_info: dict, conversation_history: List): dict
        +get_available_agents(): List<dict>
        +analyze_query(query: String): dict
        -_build_workflow(): StateGraph
        -_classify_node(state: AgentState): AgentState
        -_generate_node(state: AgentState): AgentState
        -_revise_node(state: AgentState): AgentState
    }

    class ClassifierAgent {
        -CATEGORIES: dict
        -llm: ChatGroq
        +classify(query: String, user_context: String, conversation_history: List): dict
        +execute(state: AgentState): AgentState
    }

    class GeneratorAgent {
        -CATEGORY_PROMPTS: dict
        -llm: ChatGroq
        +generate(query: String, category: String, context: dict, user_context: String, conversation_history: List): dict
        +execute(state: AgentState): AgentState
    }

    class RevisionAgent {
        -llm: ChatGroq
        -system_prompt: String
        +revise(original_query: String, generated_response: String, category: String, user_context: String, conversation_history: List): dict
        +execute(state: AgentState): AgentState
    }
}

' ─── Ereditarietà ────────────────────────────────────────────
Agent <|-- ClassifierAgent
Agent <|-- GeneratorAgent
Agent <|-- RevisionAgent

' ─── Composizione Orchestrator ────────────────────────────────
OrchestratorAgent "1" *--> "1" ClassifierAgent : classifier
OrchestratorAgent "1" *--> "1" GeneratorAgent  : generator
OrchestratorAgent "1" *--> "1" RevisionAgent   : reviser
OrchestratorAgent --> AgentState                : crea/aggiorna
@enduml